# music2lyrics

./: .gitignore  CLAUDE.md  README.md  setup.sh  srt_to_lrc.py  transcribe.sh
.claude/: settings.local.json
.claude/skills/: setup.md  transcribe.md
app/: .pnpm-approve-builds.json  index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  AppContext.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/components/: BatchQueue.tsx  FileSelector.tsx  LogPanel.tsx  LrcPlayer.tsx  ResultViewer.tsx  SongList.tsx
app/src/hooks/: useLogStream.ts  useLrcPlayer.ts  useTranscribe.ts
app/src/lib/: lrc-parser.ts
